charts/servers/factorioSpaceEx/base/factorio-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorio-ingress
  namespace: factorio #default # different ns?
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 172-105-2-243.ip.linodeusercontent.com
      http:
        paths:
          - path: /factorio
            pathType: Prefix
            backend:
              service:
                name: server-factorio-server-charts
                port:
                  number: 27015
